# lazespell

./: CMakeLists.txt  lazespell  lazespell.c  speller.c  speller.h
doc/: README.md
